Add data collection details to index.html
Added information about collected data and user permissions.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
             <li>Suporte técnico personalizado</li>
             <li>Logs de auditoria e rastreabilidade</li>
         </ul>
-        
+        <h2>1. 📊 Informações Coletadas</h2>
+        <p>O SeeNet coleta os seguintes dados:</p>
+        <ul>
+            <li><strong>Dados de cadastro:</strong> Nome, email, empresa</li>
+            <li><strong>Dados de uso:</strong> Diagnósticos realizados, checklists preenchidos</li>
+            <li><strong>Logs de sistema:</strong> Atividades técnicas, alterações de configuração</li>
+            <li><strong>Áudio:</strong> Transcrições de voz (quando autorizado pelo usuário)</li>
+            <li><strong>Câmera:</strong> Captura de fotos para anexar em diagnósticos técnicos (quando autorizado pelo usuário)</li>
+        </ul>
         <h2>3. 🔒 Segurança e Armazenamento</h2>
         <p>Levamos a segurança dos seus dados a sério:</p>
         <ul>
