Revise audio data description in index.html
Updated audio data usage description for clarity.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><strong>Dados de cadastro:</strong> Nome, email, empresa</li>
             <li><strong>Dados de uso:</strong> Diagnósticos realizados, checklists preenchidos</li>
             <li><strong>Logs de sistema:</strong> Atividades técnicas, alterações de configuração</li>
-            <li><strong>Áudio:</strong> Transcrições de voz (quando autorizado pelo usuário)</li>
+            <li><strong>Gravação de áudio:</strong> O app utiliza o microfone do dispositivo para capturar áudio e convertê-lo em texto (transcrição de voz). Esta funcionalidade é opcional e só é ativada quando o usuário pressiona o botão de gravação. O áudio é processado e apenas o texto transcrito é armazenado. Os arquivos de áudio não são salvos permanentemente no dispositivo ou no servidor.</li>
         </ul>
         
         <h2>2. 🎯 Como Usamos seus Dados</h2>
