Add account deletion instructions and consequences
Added section on account deletion and data removal process.

--- a/index.html
+++ b/index.html
@@ -199,6 +199,73 @@
             <li>Acesso a arquivos locais para anexar documentos em diagnósticos</li>
             <li>Leitura de imagens e documentos compartilhados</li>
         </ul>
+
+        <h2 id="exclusao">9. 🗑️ Solicitar Exclusão de Conta e Dados</h2>
+
+<h3>Como Solicitar a Exclusão</h3>
+<p>Você pode solicitar a exclusão da sua conta e de todos os dados associados no <strong>SeeNet</strong> seguindo as etapas abaixo:</p>
+
+<div style="background: #f0f0f0; padding: 20px; border-radius: 5px; border-left: 4px solid #00FF88; margin: 20px 0;">
+    <h4 style="margin-top: 0;">📧 Envie um email para:</h4>
+    <p style="font-size: 18px; margin: 10px 0;"><strong>suporte@seenet.com.br</strong></p>
+    
+    <h4>📝 Inclua no email:</h4>
+    <ul>
+        <li><strong>Assunto:</strong> "Solicitação de Exclusão de Conta - SeeNet"</li>
+        <li><strong>Seu nome completo</strong></li>
+        <li><strong>Email cadastrado no app</strong></li>
+        <li><strong>Nome da empresa/organização</strong></li>
+        <li><strong>Tipo de solicitação:</strong>
+            <ul>
+                <li>Exclusão completa da conta e todos os dados</li>
+                <li>OU exclusão parcial de dados específicos (especifique quais)</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
+<h3>⏱️ Prazo de Processamento</h3>
+<p>Sua solicitação será processada em até <strong>30 dias úteis</strong>. Você receberá uma confirmação por email quando a exclusão for concluída.</p>
+
+<h3>🗂️ O Que Será Excluído</h3>
+<p>Ao solicitar a exclusão completa da conta, os seguintes dados serão <strong>permanentemente removidos</strong>:</p>
+<ul>
+    <li>✅ Dados de cadastro (nome, email, empresa)</li>
+    <li>✅ Histórico de diagnósticos realizados</li>
+    <li>✅ Checklists preenchidos</li>
+    <li>✅ Transcrições de voz</li>
+    <li>✅ Configurações personalizadas</li>
+    <li>✅ Logs de atividades associados à sua conta</li>
+</ul>
+
+<h3>📋 Dados Mantidos (Por Obrigação Legal)</h3>
+<p>Alguns dados podem ser mantidos por períodos específicos para cumprir obrigações legais, fiscais ou regulatórias:</p>
+<ul>
+    <li>🕒 <strong>Logs de auditoria:</strong> Mantidos por até 5 anos (conforme LGPD)</li>
+    <li>🕒 <strong>Dados de faturamento:</strong> Mantidos conforme legislação tributária (se aplicável)</li>
+    <li>🕒 <strong>Dados anonimizados:</strong> Podem ser mantidos para análises estatísticas (sem identificação pessoal)</li>
+</ul>
+
+<h3>🔄 Exclusão Parcial de Dados</h3>
+<p>Se você deseja excluir apenas dados específicos <strong>sem encerrar sua conta</strong>, especifique no email quais informações deseja remover:</p>
+<ul>
+    <li>Histórico de diagnósticos de um período específico</li>
+    <li>Transcrições de voz</li>
+    <li>Dados de um projeto ou cliente específico</li>
+</ul>
+<p><strong>Observação:</strong> Alguns dados essenciais (nome, email, empresa) não podem ser excluídos sem o encerramento completo da conta.</p>
+
+<h3>⚠️ Consequências da Exclusão</h3>
+<p>Ao excluir sua conta:</p>
+<ul>
+    <li>❌ Você <strong>perderá acesso permanente</strong> ao app SeeNet</li>
+    <li>❌ Todos os diagnósticos e históricos serão <strong>irrecuperáveis</strong></li>
+    <li>❌ Outros usuários da sua empresa <strong>não terão mais acesso</strong> aos seus dados compartilhados</li>
+</ul>
+
+<h3>📞 Dúvidas sobre Exclusão</h3>
+<p>Se tiver dúvidas sobre o processo de exclusão, entre em contato:</p>
+<p><strong>Email:</strong> suporte@seenet.com.br</p>
         
         <div class="contact">
             <h2>10. 📧 Contato</h2>
