Revise account deletion instructions and support info
Updated the account deletion process details, including options for complete and partial data deletion, and added support contact information.

--- a/index.html
+++ b/index.html
@@ -202,66 +202,164 @@
 
         <h2 id="exclusao">10. 🗑️ Solicitar Exclusão de Conta e Dados</h2>
 
-<h3>Como Solicitar a Exclusão</h3>
-<p>Você pode solicitar a exclusão da sua conta e de todos os dados associados no <strong>SeeNet</strong> seguindo as etapas abaixo:</p>
+<p>O <strong>SeeNet</strong> oferece controle total sobre seus dados. Você pode solicitar a exclusão completa da conta ou apenas de dados específicos.</p>
+
+<h3>📧 Como Solicitar</h3>
 
 <div style="background: #f0f0f0; padding: 20px; border-radius: 5px; border-left: 4px solid #00FF88; margin: 20px 0;">
-    <h4 style="margin-top: 0;">📧 Envie um email para:</h4>
-    <p style="font-size: 18px; margin: 10px 0;"><strong>suporte@seenet.com.br</strong></p>
-    
-    <h4>📝 Inclua no email:</h4>
-    <ul>
-        <li><strong>Assunto:</strong> "Solicitação de Exclusão de Conta - SeeNet"</li>
-        <li><strong>Seu nome completo</strong></li>
-        <li><strong>Email cadastrado no app</strong></li>
-        <li><strong>Nome da empresa/organização</strong></li>
-        <li><strong>Tipo de solicitação:</strong>
+    <h4 style="margin-top: 0; color: #00FF88;">🔹 OPÇÃO 1: Exclusão Completa da Conta</h4>
+    <p>Para excluir sua conta e <strong>todos os dados associados</strong>:</p>
+    <ol>
+        <li>Envie um email para: <strong>suporte@seenet.com.br</strong></li>
+        <li><strong>Assunto:</strong> "Solicitação de Exclusão Completa de Conta - SeeNet"</li>
+        <li><strong>Inclua no email:</strong>
             <ul>
-                <li>Exclusão completa da conta e todos os dados</li>
-                <li>OU exclusão parcial de dados específicos (especifique quais)</li>
+                <li>Nome completo</li>
+                <li>Email cadastrado no app</li>
+                <li>Nome da empresa/organização</li>
+                <li>Motivo da exclusão (opcional)</li>
             </ul>
         </li>
+    </ol>
+    <p><strong>⏱️ Prazo:</strong> Processado em até 30 dias úteis.</p>
+</div>
+
+<div style="background: #f0f0f0; padding: 20px; border-radius: 5px; border-left: 4px solid #00FF88; margin: 20px 0;">
+    <h4 style="margin-top: 0; color: #00FF88;">🔹 OPÇÃO 2: Exclusão Parcial de Dados (Sem Excluir a Conta)</h4>
+    <p>Se você deseja manter sua conta ativa mas excluir dados específicos:</p>
+    <ol>
+        <li>Envie um email para: <strong>suporte@seenet.com.br</strong></li>
+        <li><strong>Assunto:</strong> "Solicitação de Exclusão Parcial de Dados - SeeNet"</li>
+        <li><strong>Especifique quais dados deseja excluir:</strong>
+            <ul>
+                <li>Histórico de diagnósticos (especifique período ou diagnósticos específicos)</li>
+                <li>Transcrições de voz</li>
+                <li>Checklists específicos</li>
+                <li>Dados de projetos ou clientes específicos</li>
+                <li>Logs de atividades de um período específico</li>
+            </ul>
+        </li>
+    </ol>
+    <p><strong>⏱️ Prazo:</strong> Processado em até 15 dias úteis.</p>
+    <p><strong>⚠️ Observação:</strong> Alguns dados essenciais não podem ser excluídos sem encerrar a conta:</p>
+    <ul>
+        <li>❌ Nome e email (necessários para login)</li>
+        <li>❌ Código da empresa (multi-tenant)</li>
     </ul>
 </div>
 
-<h3>⏱️ Prazo de Processamento</h3>
-<p>Sua solicitação será processada em até <strong>30 dias úteis</strong>. Você receberá uma confirmação por email quando a exclusão for concluída.</p>
-
-<h3>🗂️ O Que Será Excluído</h3>
+<h3>🗂️ Dados Excluídos na Exclusão Completa</h3>
 <p>Ao solicitar a exclusão completa da conta, os seguintes dados serão <strong>permanentemente removidos</strong>:</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+    <tr style="background: #00FF88;">
+        <th style="padding: 10px; text-align: left; border: 1px solid #ddd;">Tipo de Dado</th>
+        <th style="padding: 10px; text-align: center; border: 1px solid #ddd;">Excluído?</th>
+        <th style="padding: 10px; text-align: center; border: 1px solid #ddd;">Prazo</th>
+    </tr>
+    <tr>
+        <td style="padding: 10px; border: 1px solid #ddd;">Dados de cadastro (nome, email)</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">✅ Sim</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Imediato</td>
+    </tr>
+    <tr style="background: #f9f9f9;">
+        <td style="padding: 10px; border: 1px solid #ddd;">Histórico de diagnósticos</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">✅ Sim</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Imediato</td>
+    </tr>
+    <tr>
+        <td style="padding: 10px; border: 1px solid #ddd;">Checklists preenchidos</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">✅ Sim</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Imediato</td>
+    </tr>
+    <tr style="background: #f9f9f9;">
+        <td style="padding: 10px; border: 1px solid #ddd;">Transcrições de voz</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">✅ Sim</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Imediato</td>
+    </tr>
+    <tr>
+        <td style="padding: 10px; border: 1px solid #ddd;">Configurações do usuário</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">✅ Sim</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Imediato</td>
+    </tr>
+    <tr style="background: #f9f9f9;">
+        <td style="padding: 10px; border: 1px solid #ddd;">Logs de auditoria</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">⚠️ Parcial</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Mantido por 5 anos*</td>
+    </tr>
+    <tr>
+        <td style="padding: 10px; border: 1px solid #ddd;">Dados anonimizados</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">❌ Não</td>
+        <td style="padding: 10px; text-align: center; border: 1px solid #ddd;">Indefinido</td>
+    </tr>
+</table>
+
+<p style="font-size: 14px; color: #666;"><em>* Mantidos por obrigação legal (LGPD, auditoria, compliance)</em></p>
+
+<h3>📋 Dados Mantidos por Obrigação Legal</h3>
+<p>Alguns dados podem ser retidos após a exclusão da conta:</p>
 <ul>
-    <li>✅ Dados de cadastro (nome, email, empresa)</li>
-    <li>✅ Histórico de diagnósticos realizados</li>
-    <li>✅ Checklists preenchidos</li>
-    <li>✅ Transcrições de voz</li>
-    <li>✅ Configurações personalizadas</li>
-    <li>✅ Logs de atividades associados à sua conta</li>
+    <li>🕒 <strong>Logs de auditoria:</strong> Mantidos por até 5 anos (Art. 16, LGPD)</li>
+    <li>🕒 <strong>Dados fiscais/tributários:</strong> Mantidos conforme legislação (se aplicável)</li>
+    <li>🕒 <strong>Dados anonimizados:</strong> Sem identificação pessoal, usados para estatísticas agregadas</li>
+    <li>🕒 <strong>Backup de segurança:</strong> Excluído em até 90 dias após solicitação</li>
 </ul>
 
-<h3>📋 Dados Mantidos (Por Obrigação Legal)</h3>
-<p>Alguns dados podem ser mantidos por períodos específicos para cumprir obrigações legais, fiscais ou regulatórias:</p>
+<h3>⚠️ Consequências da Exclusão Completa</h3>
+<div style="background: #fff3cd; padding: 15px; border-radius: 5px; border-left: 4px solid #ffc107; margin: 20px 0;">
+    <p><strong>Ao excluir sua conta permanentemente:</strong></p>
+    <ul>
+        <li>❌ Você <strong>perderá acesso imediato</strong> ao app SeeNet</li>
+        <li>❌ Todos os diagnósticos e históricos serão <strong>irrecuperáveis</strong></li>
+        <li>❌ Outros usuários da sua empresa não terão mais acesso aos seus dados compartilhados</li>
+        <li>❌ Não será possível criar nova conta com o mesmo email por 90 dias</li>
+    </ul>
+</div>
+
+<h3>🔄 Exclusão Automática de Dados Temporários</h3>
+<p>Alguns dados são excluídos automaticamente sem necessidade de solicitação:</p>
 <ul>
-    <li>🕒 <strong>Logs de auditoria:</strong> Mantidos por até 5 anos (conforme LGPD)</li>
-    <li>🕒 <strong>Dados de faturamento:</strong> Mantidos conforme legislação tributária (se aplicável)</li>
-    <li>🕒 <strong>Dados anonimizados:</strong> Podem ser mantidos para análises estatísticas (sem identificação pessoal)</li>
+    <li>🗑️ <strong>Arquivos de áudio (gravações):</strong> Excluídos imediatamente após transcrição</li>
+    <li>🗑️ <strong>Cache de sessão:</strong> Excluído ao fazer logout</li>
+    <li>🗑️ <strong>Tokens de autenticação:</strong> Expiram em 30 dias de inatividade</li>
 </ul>
 
-<h3>🔄 Exclusão Parcial de Dados</h3>
-<p>Se você deseja excluir apenas dados específicos <strong>sem encerrar sua conta</strong>, especifique no email quais informações deseja remover:</p>
-<ul>
-    <li>Histórico de diagnósticos de um período específico</li>
-    <li>Transcrições de voz</li>
-    <li>Dados de um projeto ou cliente específico</li>
-</ul>
-<p><strong>Observação:</strong> Alguns dados essenciais (nome, email, empresa) não podem ser excluídos sem o encerramento completo da conta.</p>
+<h3>📞 Suporte para Exclusão de Dados</h3>
+<p>Se tiver dúvidas sobre o processo de exclusão ou precisar de assistência:</p>
+<div style="background: #e8f5e9; padding: 15px; border-radius: 5px; margin: 20px 0;">
+    <p><strong>📧 Email:</strong> suporte@seenet.com.br</p>
+    <p><strong>⏱️ Horário de atendimento:</strong> Segunda a sexta, 9h às 18h (horário de Brasília)</p>
+    <p><strong>⚡ Tempo de resposta:</strong> Até 48 horas úteis</p>
+</div>
 
-<h3>⚠️ Consequências da Exclusão</h3>
-<p>Ao excluir sua conta:</p>
-<ul>
-    <li>❌ Você <strong>perderá acesso permanente</strong> ao app SeeNet</li>
-    <li>❌ Todos os diagnósticos e históricos serão <strong>irrecuperáveis</strong></li>
-    <li>❌ Outros usuários da sua empresa <strong>não terão mais acesso</strong> aos seus dados compartilhados</li>
-</ul>
+<h3>✅ Confirmação de Exclusão</h3>
+<p>Após processar sua solicitação, você receberá:</p>
+<ol>
+    <li>📧 <strong>Email de confirmação</strong> informando que a exclusão foi concluída</li>
+    <li>📋 <strong>Relatório de exclusão</strong> especificando quais dados foram removidos</li>
+    <li>🕒 <strong>Informação sobre dados retidos</strong> (se aplicável) e período de retenção</li>
+</ol>
+```
+
+---
+
+## 🔗 **URLs PARA COLOCAR NA PLAY CONSOLE**
+
+Depois de salvar e aguardar a atualização (5-10 minutos):
+
+### **1. URL para exclusão de contas:**
+```
+https://vingreyck.github.io/seenet-privacy/#exclusao
+```
+
+### **2. Você oferece exclusão parcial de dados?**
+```
+✅ Sim
+```
+
+### **3. URL para exclusão parcial de dados:**
+```
+https://vingreyck.github.io/seenet-privacy/#exclusao
 
 <h3>📞 Dúvidas sobre Exclusão</h3>
 <p>Se tiver dúvidas sobre o processo de exclusão, entre em contato:</p>
